--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -55,7 +55,8 @@
     </div>
 </div>
 }
-
+<br />
+<br />
 <div>
-    @Html.ActionLink("Back to User Module", "Index", new { area = "" }, new { @class = "btn btn-info" })
+    @Html.ActionLink("Back to User Module", "Index", new { area = "" }, new { @class = "btn-outline-primary" })
 </div>
