--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -7,4 +7,8 @@
 <h2>Modulo Usuarios</h2>
 <br />
 <br />
-@Html.ActionLink("Create User", "Create", "User", new { area = "" }, new {  })
+<h3>@Html.ActionLink("Create User", "Create", "User", null, new { @class = "btn btn-primary" })</h3>
+<br />
+<h3>@Html.ActionLink("Login User", "Login", "User", null, new { @class = "btn btn-primary" })</h3>
+<br />
+<h3><a class="btn btn-primary" href="/User/Login">Login User</a></h3>
